--- a/configs/data_process.yaml
+++ b/configs/data_process.yaml
@@ -1,7 +1,7 @@
 dataset:
   train:
     type: peprec
-    structure_dir: /PepMerge_origin
+    structure_dir: /PepMerge
     dataset_dir: /Fixed_Data
     name: pep_pocket_train
     reset: False
@@ -9,7 +9,7 @@ dataset:
     name_mine: pep_pocket_train_surf
   val:
     type: peprec
-    structure_dir: /PepMerge_origin
+    structure_dir: /PepMerge
     dataset_dir: /Fixed_Data
     name: pep_pocket_test
     reset: False
