--- a/configs/learn_surf_angle.yaml
+++ b/configs/learn_surf_angle.yaml
@@ -78,7 +78,7 @@ model:
       coordinate_scaling: 0.5
       schedule: cosine # 'linear'
       use_heun: False
-      trans_x0_threshold: 0.0
+      trans_x0_threshold: 1.0
       trans_x0_weight: 1.0
     so3:
       num_omega: 1000
@@ -88,8 +88,8 @@ model:
       schedule: logarithmic
       cache_dir: .cache/
       use_cached_score: False
-      rot_x0_threshold: 0.8
-      rot_x0_weight: 0.2
+      rot_x0_threshold: 0.0
+      rot_x0_weight: 0.0
     tour:
       min_sigma: -6.0
       max_sigma: 2.0
@@ -106,9 +106,9 @@ model:
     rot_loss_weight: 0.5
     bb_atom_loss_weight: 0.25
     seqs_loss_weight: 1.0
-    angle_loss_weight: 0.3
+    angle_loss_weight: 1.0
     torsion_loss_weight: 0.5
-    surface_loss_weight: 0.05
+    surface_loss_weight: 0.1
 train:
   max_iters: 400000000
   val_freq: 20000
@@ -119,7 +119,7 @@ train:
   
   optimizer:
     type: adam
-    lr: 1.e-3 # 1.e-4
+    lr: 2.e-4 # 1.e-4
     weight_decay: 0.0
     beta1: 0.9
     beta2: 0.999
@@ -131,14 +131,14 @@ train:
 dataset:
   train:
     type: peprec
-    structure_dir: /mnt/storage1/gli/1Data/data_surface/pepbridge/origin_data/PepMerge_origin
-    dataset_dir: /mnt/storage1/gli/1Data/data_surface/pepbridge/Fixed_Data
-    name: pep_pocket_train_surf3
+    structure_dir: /PepMerge
+    dataset_dir: /Process_Data
+    name: pep_pocket_train_surf
     reset: False
   val:
     type: peprec
-    structure_dir: /mnt/storage1/gli/1Data/data_surface/pepbridge/origin_data/PepMerge_test
-    dataset_dir: /mnt/storage1/gli/1Data/data_surface/pepbridge/Fixed_Data
-    name: pep_pocket_test_surf4
+    structure_dir: /PepMerge
+    dataset_dir: /Process_Data
+    name: pep_pocket_test_surf
     reset: False
 
